--- a/Assets/Scripts/Game/Data/数据驱动配置系统.md
+++ b/Assets/Scripts/Game/Data/数据驱动配置系统.md
@@ -1,531 +1,367 @@
-﻿# 数据驱动配置系统 使用说明 (GameRuntimeData + DefinitionSectionBase)
+﻿# GameContext 系统完整使用说明文档（v1.1）
 
-版本: 1.1  
-最后更新: 2025-09-03  
-作者: 郑钦（更新整理含资源系统建模建议）
+## 1. 系统概述
 
-相较 1.0 更新摘要：
+GameContext 是游戏的核心上下文管理系统，作为数据驱动配置框架的入口点，负责统一加载、构建和管理所有游戏配置数据。该系统基于单例模式设计，通过反射机制实现配置类型的自动扫描与加载，彻底消除硬编码配置引用，支持类型安全的配置访问。
 
-- 新增：资源物品 vs 采集节点（Gatherable Node）分离的建模指南
-- 新增：运行时状态与存档区分章节
-- 新增：跨 Section 引用与校验建议示例
-- 新增：采集/掉落/生成相关扩展方向
-- 补充 FAQ：为什么不要在 Definition 中保存运行时动态值
-- 示例代码扩展为“物品定义 + 采集节点定义”组合
+系统核心价值在于实现"**配置数据与业务逻辑的解耦**"，允许开发者通过新增配置资产而非修改代码来扩展游戏内容，特别适合需要频繁调整数值、物品、配方等数据的工厂建造类游戏（如《Asaki Factory Game》）。
 
----
+## 2. 核心概念与架构
 
-## 目录
+### 2.1 核心概念定义
 
-1. 系统目标概述
-2. 核心概念
-3. 目录 & 主要文件角色
-4. 初始化执行流程
-5. 如何新增一个配置 Section
-6. 如何访问配置与定义
-7. 编辑器工作流（配合 [CustomConfig] 与 ConfigDatabaseWindow）
-8. 运行时 / 构建注意事项
-9. 校验与调试
-10. 常见错误与诊断
-11. 性能与扩展建议
-12. 设计 FAQ
-13. 典型使用示例代码
-14. 未来可扩展方向
-15. 资源与采集节点建模指南（重要新增）
-16. 运行时状态 / 存档 与 Definition 的关系
-17. 跨 Section 引用与校验策略
-18. ID 管理与防冲突策略
-19. 变更记录（Changelog）
-    附录：快速 Checklist
+| 概念名称 | 含义与作用 |
+|---------|-----------|
+| **IDefinition** | 所有配置条目的基础接口，定义唯一int类型ID |
+| **IContextSection** | 配置分区标记接口，每个实现类代表一类配置集合（如物品、配方） |
+| **DefinitionSectionBase<TDef>** | 泛型配置分区基类，提供配置加载与注册表构建的默认实现 |
+| **DefinitionRegistry<TDef>** | 配置注册表，负责ID到配置实例的映射与查询 |
+| **GameRuntimeData** | 运行时数据容器，存储所有加载后的配置分区与注册表 |
+| **RuntimeConfigLoader** | 配置加载工具类，负责反射扫描配置类型并加载对应资产 |
+| **GameContextConfig** | 系统配置参数，控制加载行为、日志输出等选项 |
 
----
-
-## 1. 系统目标概述
-
-该系统提供一套“**纯数据驱动 / 无硬编码字段 / 自动扫描加载 / 泛型注册表**”的游戏配置框架，解决以下痛点：
-
-| 需求                                       | 解决方式                                                            |
-| ---------------------------------------- | --------------------------------------------------------------- |
-| 避免 GameContext 硬编码 Items/Recipes 等字段     | 使用 GameRuntimeData 动态注册表 + Type/SectionName/DefinitionType 三重索引 |
-| 快速新增任意配置集合（Section）                      | 继承 DefinitionSectionBase<TDef> 并实现 IDefinition                  |
-| 统一访问方式                                   | GameContext.Instance.GetDefinition<TDef>(id)                    |
-| 编辑器集中管理与批量操作                             | [CustomConfig] + ConfigDatabaseWindow                           |
-| 安全检验/调试                                  | SectionValidationUtility + 日志                                   |
-| 可扩展（跨 Section 校验 / 自定义 Registry / 地址化加载） | 结构已预留                                                           |
-
----
-
-## 2. 核心概念
-
-| 名称                          | 含义                                               |
-| --------------------------- | ------------------------------------------------ |
-| IDefinition                 | 具有唯一 int Id 的定义条目接口                              |
-| DefinitionRegistry<TDef>    | Id → 定义实例的字典封装，可继承扩展查询                           |
-| DefinitionSectionBase<TDef> | 泛型 Section 基类：持有 List<TDef>，Build 时生成 Registry   |
-| IContextSection             | GameContext 扫描 & 构建的 Section 单元                  |
-| GameRuntimeData             | 存放所有注册对象：Type / SectionName / DefinitionType 三索引 |
-| RuntimeConfigLoader         | 反射扫描 Section 类型 + 加载资产                           |
-| GameContext                 | 框架入口：集中构建所有 Section                              |
-| [CustomConfig]              | 编辑器标记（供 ConfigDatabaseWindow 过滤显示）               |
-| Registry 扩展                 | 可自定义派生类添加索引 / 条件查询                               |
-| SectionName                 | 逻辑命名空间（非类型名）允许手动覆盖                               |
-| DefinitionType              | 一个 Registry 服务的定义类型（TDef）                        |
-
----
-
-## 3. 目录 & 主要文件角色
+### 2.2 系统架构图
 
 ```
-Scripts/
-  Data/Core/
-    IDefinition.cs
-    IDefinitionRegistry.cs
-    DefinitionRegistry.cs
-    DefinitionSectionBase.cs
-    IContext.cs
-    IContextSection.cs
-    GameRuntimeData.cs
-    GameContextConfig.cs
-    RuntimeConfigLoader.cs
-    SectionValidationUtility.cs (Editor)
-  Data/Items/
-    ItemsSection.cs
-  Data/Gatherables/
-    GatherableNodesSection.cs (示例扩展)
-  Data/Recipes/
-    RecipesSection.cs
-  ...
-  Core/
-    GameContext.cs
+┌─────────────────┐      ┌──────────────────┐      ┌───────────────────┐
+│  SingletonManager  │───→│  GameContext     │───→  │  GameRuntimeData  │
+└─────────────────┘      └────────┬─────────┘      └────────┬──────────┘
+                                  │                         │
+                   ┌──────────────┘                         │
+                   ▼                                        │
+        ┌─────────────────────┐                             │
+        │  RuntimeConfigLoader│                             │
+        └──────────┬──────────┘                             │
+                   │                                        │
+     ┌─────────────┴─────────────┐                          │
+     ▼                           ▼                          │
+┌─────────────┐           ┌─────────────┐                   │
+│ 物品配置分区  │           │ 配方配置分区  │           ┌──────┴───────┐
+│(ItemSection)│           │(RecipeSection)│          │  注册表集合    │
+└──────┬──────┘           └──────┬──────┘           │(Registries)   │
+       │                         │                   └───────────────┘
+       ▼                         ▼
+┌─────────────┐           ┌─────────────┐
+│ 物品定义集合  │           │ 配方定义集合  │
+│(ItemDefinition)│        │(RecipeDefinition)│
+└─────────────┘           └─────────────┘
 ```
 
----
+## 3. 核心组件详解
 
-## 4. 初始化执行流程
+### 3.1 GameContext 类
+
+游戏上下文核心类，继承自MonoBehaviour并实现单例初始化接口，是系统的唯一入口点。
+
+**关键属性**：
+- `Instance`：静态单例实例，通过`GameContext.Instance`访问
+- `Data`：`GameRuntimeData`实例，存储所有加载的配置数据
+- `config`：`GameContextConfig`引用，控制系统行为
+
+**核心方法**：
+
+| 方法 | 功能描述 |
+|------|---------|
+| `Initialize()` | 启动配置加载流程，由`SingletonManager`自动调用 |
+| `TryGetRegistry<TRegistry>()` | 尝试获取指定类型的注册表（返回bool） |
+| `GetRegistry<TRegistry>()` | 获取指定类型的注册表（不存在则抛异常） |
+| `TryGetDefinition<TDef>()` | 尝试获取指定ID的配置定义（返回bool） |
+| `GetDefinition<TDef>()` | 获取指定ID的配置定义（不存在则抛异常） |
+
+**初始化流程**：
+1. 由`SingletonManager`触发`OnRegistered`回调，设置单例实例
+2. 调用`Initialize()`方法启动构建流程
+3. 创建`GameRuntimeData`实例
+4. 扫描所有实现`IContextSection`的类型
+5. 加载对应类型的配置资产并执行`Build()`方法
+6. 收集构建统计信息并输出日志
+
+### 3.2 GameContextConfig 类
+
+系统配置参数类，继承自`ScriptableObject`，可在编辑器中创建配置资产。
+
+**配置项说明**：
+
+| 配置项 | 类型 | 描述 |
+|-------|------|------|
+| `verbose` | bool | 是否输出详细加载日志（开发期建议开启） |
+| `forceRescanOnPlay` | bool | 运行时是否强制重新扫描配置类型（关闭可提升性能） |
+| `logSummaryAfterBuild` | bool | 构建完成后是否输出统计摘要 |
+
+**使用方式**：
+在Unity编辑器中右键创建：`Create → Game → GameContextConfig`，并赋值给`GameContext`预制体的`config`字段。
+
+### 3.3 关键接口与基类
+
+#### IContext
+- 标记接口，所有需要被`GameContext`识别的配置资产必须实现此接口
+- 通常与`ScriptableObject`结合使用（如`public class ItemSection : ScriptableObject, IContextSection`）
+
+#### IContextSection
+- 继承自`IContext`，定义配置分区的核心行为
+- 包含`SectionName`属性（配置分区的逻辑名称）和`Build(GameRuntimeData data)`方法（构建注册表）
+
+#### DefinitionSectionBase<TDef>
+- 泛型抽象基类，实现`IContextSection`接口
+- 提供默认的`SectionName`（类名）和`Build`方法实现
+- 子类只需定义`List<TDef> definitions`字段即可自动构建注册表
+
+## 4. 初始化与加载流程
+
+### 4.1 完整执行流程
 
 ```
-+---------------------------+
-| SingletonManager          |
-| (Initialize Pipeline)     |
-+-------------+-------------+
-              |
-              v
-      GameContext.Initialize()
-              |
-              v
-   RuntimeConfigLoader.GetSectionTypes()
-              |
-     反射所有实现 IContextSection
-              |
-              v
-   每个 SectionType → 枚举其所有资产
-              |
-              v
-         s.Build(data)
-              |
-              v
-  GameRuntimeData.RegisterSection()
-   ├─ SectionName → 实例
-   ├─ InstanceType → 实例
-   └─ DefinitionType → Registry (若实现 IDefinitionRegistry)
-              |
-              v
-        日志 & 可选校验
+1. 游戏启动 → SingletonManager 初始化
+2. SingletonManager 发现 GameContext 实例并调用 OnRegistered
+3. GameContext 初始化单例实例 → 调用 Initialize()
+4. 检查是否已构建 → 未构建则执行 BuildAll()
+5. RuntimeConfigLoader 扫描所有实现 IContextSection 的类型
+   - 若 forceRescanOnPlay=false，使用缓存的扫描结果
+   - 若 forceRescanOnPlay=true，强制重新反射扫描
+6. 对每个扫描到的类型：
+   a. 加载所有对应类型的配置资产（Editor 用 AssetDatabase，运行时用 Resources）
+   b. 对每个资产调用 Build() 方法，将配置数据注册到 GameRuntimeData
+7. 构建完成 → 输出耗时、配置数、资产数等统计信息
+8. 若启用 logSummaryAfterBuild，输出 GameRuntimeData 摘要
 ```
 
----
+### 4.2 配置资产加载规则
 
-## 5. 如何新增一个配置 Section
+| 环境 | 加载方式 | 路径要求 |
+|------|---------|---------|
+| 编辑器（Editor） | `AssetDatabase.FindAssets` | 无强制路径，建议放在`Assets/Configs`目录 |
+| 运行时（Player） | `Resources.LoadAll("Config", sectionType)` | 必须放在`Resources/Config`目录下 |
 
-1. 定义数据结构（实现 IDefinition）
-2. 新建 Section 派生自 DefinitionSectionBase<TDef>
-3. （可选）自定义 Registry：添加额外检索/索引
-4. 创建资产、填充 definitions 列表
-5. 运行游戏，验证加载日志
+> 注意：运行时环境下，配置资产的文件夹结构不影响加载，但必须确保最终打包到`Resources/Config`路径下。
 
-示例（精简）：
+## 5. 使用方法
 
+### 5.1 访问配置定义
+
+**直接获取（适用于确定存在的配置）**：
 ```csharp
-[System.Serializable]
-public class EnemyDefinition : IDefinition {
-    [SerializeField] private int id;
-    public int Id => id;
-    public string displayName;
-    public int hp;
-    public int attack;
-}
-
-[CustomConfig]
-[CreateAssetMenu(menuName="Game/Config/Enemies Section")]
-public class EnemiesSection : DefinitionSectionBase<EnemyDefinition> {
-    public override string SectionName => "Enemies";
-}
-```
-
----
-
-## 6. 如何访问配置与定义
-
-```csharp
-// 直接取定义（未找到抛异常）
+// 获取ID为1001的物品定义
 var sword = GameContext.Instance.GetDefinition<ItemDefinition>(1001);
+Debug.Log($"物品名称：{sword.displayName}，伤害：{sword.damage}");
 
-// 安全尝试
-if (GameContext.Instance.TryGetDefinition<RecipeDefinition>(3005, out var recipe)) {
-    // ...
+// 获取ID为3005的配方定义
+var recipe = GameContext.Instance.GetDefinition<RecipeDefinition>(3005);
+```
+
+**安全获取（适用于可能不存在的配置）**：
+```csharp
+// 尝试获取ID为2003的采集节点定义
+if (GameContext.Instance.TryGetDefinition<GatherableNodeDefinition>(2003, out var node))
+{
+    Debug.Log($"采集节点：{node.name}，产出：{node.dropItemId}");
 }
-
-// 获取自定义 Registry
-var itemReg = GameContext.Instance.GetRegistry<ItemRegistry>();
-var plank = itemReg.Get(1002);
-
-// 遍历所有 Section
-foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections()) {
-    Debug.Log($"Section={name}, Type={inst.GetType().Name}");
+else
+{
+    Debug.LogWarning("未找到ID为2003的采集节点定义");
 }
 ```
 
----
+### 5.2 操作注册表
+
+**获取整个注册表**：
+```csharp
+// 获取物品注册表
+var itemRegistry = GameContext.Instance.GetRegistry<ItemRegistry>();
+
+// 枚举所有物品
+foreach (var item in itemRegistry.EnumerateAll())
+{
+    Debug.Log($"物品ID：{item.Id}，名称：{item.name}");
+}
+
+// 按条件查询
+var weapons = itemRegistry.FindAll(item => item.category == ItemCategory.Weapon);
+```
+
+**自定义注册表扩展**：
+```csharp
+// 自定义注册表示例
+public class ItemRegistry : DefinitionRegistry<ItemDefinition>
+{
+    // 添加按类别查询的方法
+    public List<ItemDefinition> GetByCategory(ItemCategory category)
+    {
+        return definitions.Where(d => d.category == category).ToList();
+    }
+}
+
+// 使用自定义方法
+var tools = GameContext.Instance.GetRegistry<ItemRegistry>().GetByCategory(ItemCategory.Tool);
+```
+
+### 5.3 枚举配置分区
+
+```csharp
+// 遍历所有配置分区
+foreach (var (sectionName, sectionInstance) in GameContext.Instance.Data.EnumerateSections())
+{
+    Debug.Log($"配置分区：{sectionName}，类型：{sectionInstance.GetType().Name}");
+    
+    // 检查是否为物品配置分区
+    if (sectionInstance is ItemSection itemSection)
+    {
+        Debug.Log($"该分区包含 {itemSection.definitions.Count} 个物品定义");
+    }
+}
+```
+
+## 6. 扩展配置系统
+
+### 6.1 新增配置类型步骤
+
+1. **定义配置条目类**（实现`IDefinition`）：
+```csharp
+public class EnemyDefinition : IDefinition
+{
+    public int Id { get; set; }
+    public string name;
+    public int health;
+    public int damage;
+    public float speed;
+}
+```
+
+2. **创建配置分区类**（继承`DefinitionSectionBase`）：
+```csharp
+[CreateAssetMenu(menuName = "Game/Configs/EnemySection")]
+public class EnemySection : DefinitionSectionBase<EnemyDefinition>
+{
+    // 可重写SectionName（默认使用类名）
+    public override string SectionName => "Enemies";
+    
+    // 可选：重写Build方法添加自定义逻辑
+    public override void Build(GameRuntimeData data)
+    {
+        // 执行基类的注册表构建
+        base.Build(data);
+        
+        // 添加自定义校验逻辑
+        foreach (var enemy in definitions)
+        {
+            if (enemy.health <= 0)
+            {
+                Debug.LogWarning($"敌人ID {enemy.Id} 生命值无效");
+            }
+        }
+    }
+}
+```
+
+3. **创建配置资产**：
+   在Unity编辑器中右键选择`Create → Game → Configs → EnemySection`，添加敌人定义数据并保存到`Assets/Configs/Enemies`目录。
+
+4. **使用新配置**：
+```csharp
+// 获取敌人定义
+var slime = GameContext.Instance.GetDefinition<EnemyDefinition>(5001);
+Debug.Log($"史莱姆：生命值 {slime.health}，伤害 {slime.damage}");
+```
+
+### 6.2 配置校验扩展
+
+**实现跨分区校验**：
+```csharp
+public static class CrossSectionValidator
+{
+    public static void ValidateAll(GameRuntimeData data)
+    {
+        // 验证配方中引用的物品是否存在
+        var recipeReg = data.Get<RecipeRegistry>();
+        var itemReg = data.Get<ItemRegistry>();
+        
+        foreach (var recipe in recipeReg.EnumerateAll())
+        {
+            foreach (var ingredient in recipe.ingredients)
+            {
+                if (!itemReg.TryGet(ingredient.itemId, out _))
+                {
+                    Debug.LogError($"配方 {recipe.Id} 引用了不存在的物品 {ingredient.itemId}");
+                }
+            }
+        }
+    }
+}
+
+// 在GameContext.BuildAll()末尾调用
+// CrossSectionValidator.ValidateAll(Data);
+```
 
 ## 7. 编辑器工作流
 
-1. 想在配置窗口出现 → 加 [CustomConfig]
-2. Section 资产可多个（是否允许合并由你决定）
-3. definitions 列表：直接拖/增/删
-4. 运行前可执行 Validate 菜单快速发现结构错误
-5. 建议：一个概念域一个 Section，避免重复 Id 管理困难
+### 7.1 配置管理工具
 
----
+系统与`ConfigDatabaseWindow`集成，可通过`Tools/Config DB/Open Database Window`打开：
+- 集中显示所有`[CustomConfig]`标记的配置资产
+- 支持按类型筛选、搜索ID和名称
+- 提供批量操作（如ID冲突检查、导出CSV）
 
-## 8. 运行时 / 构建注意事项
+### 7.2 ID常量生成
 
-| 项            | 说明                                                            |
-| ------------ | ------------------------------------------------------------- |
-| Editor 加载    | AssetDatabase.FindAssets 精确加载                                 |
-| Player 加载    | Resources.LoadAll("Config", sectionType)（需放 Resources/Config） |
-| 顺序不保证        | 多资产同类型之间无顺序保证                                                 |
-| 反射扫描缓存       | forceRescanOnPlay=false 时只第一次扫描                               |
-| IL2CPP 剪裁    | 继承关系 + 资产引用已防裁剪，复杂动态场景可加 link.xml                             |
-| 多个相同 Section | 若造成 Id 冲突，仅打印错误，不中断构建（可自定义改为抛异常）                              |
-
----
-
-## 9. 校验与调试
-
-| 工具                       | 作用                  |
-| ------------------------ | ------------------- |
-| Validate All Sections 菜单 | 尝试构建每个 Section，捕获异常 |
-| verbose 日志               | 输出类型数量 / 资产数量 / 耗时  |
-| Data.LogSummary()        | 输出当前注册计数            |
-| 自定义 Cross Validator      | 进行跨表引用一致性校验         |
-
----
-
-## 10. 常见错误与诊断
-
-| 现象                | 原因                             | 处理                               |
-| ----------------- | ------------------------------ | -------------------------------- |
-| GetDefinition 抛异常 | Id 不存在                         | 确认资产 & Id，必要时改用 TryGetDefinition |
-| Section 未加载       | 未实现 IContextSection 或未放指定目录    | 确认继承/目录                          |
-| 重复 Id 日志          | 两个资产包含相同 Id                    | 在编辑器中整理；考虑写 Id 分配工具              |
-| 运行时访问 Null        | 初始化顺序错误                        | 确认在 GameContext.Init 后执行         |
-| 想修改 Definition 值  | 不应在运行时直接改模板                    | 拷贝到运行时状态对象                       |
-| 想做热更              | 需替换加载层（Addressables / 外部 JSON） | 封装 Provider                      |
-
----
-
-## 11. 性能与扩展建议
-
-| 场景        | 建议                                     |
-| --------- | -------------------------------------- |
-| 定义数量 < 1k | 现实现足够                                  |
-| 1k~10k    | 避免重复字符串解析，必要时改用 struct + Blob          |
-| >10k      | 外部二进制表 + 轻量缓存层                         |
-| 频繁按条件查询   | 在自定义 Registry 里建索引（如 Tag → List<int>）  |
-| 动态卸载      | 增加 Unregister/Clear API（当前未实现）         |
-| 分区域加载     | Addressables 标签化 Section；按需加载后手动 Build |
-
----
-
-## 12. 设计 FAQ
-
-Q: Definition 可以相互直接引用对象吗？  
-A: 可以，但建议优先使用 Id 式引用，便于导表/热更与解耦。
-
-Q: 为什么不要在 Definition 里放“当前剩余次数”？  
-A: Definition 是模板（静态），运行时状态应放实例对象；否则多个实体共享同一值产生逻辑污染。
-
-Q: 我需要控制 Section 构建顺序怎么办？  
-A: 引入 IOrderedSection 接口或创建 SectionMeta 列表排序。
-
-Q: 想阻止多个同类 Section 共存？  
-A: 在 Build 时检测 Data.EnumerateSections() 是否已有同名/同类型并抛异常。
-
-Q: 可以把 JSON 动态加载合并进来吗？  
-A: 写一个 JsonSection<TDef>：运行时读取外部文件 → 构建 registry → RegisterSection。
-
----
-
-## 13. 典型使用示例代码
-
-### 13.1 配方消耗
-
+使用`ConfigIdCodeGenerator`自动生成ID常量：
+1. 菜单选择`Tools/Config DB/Generate Config Id Constants`
+2. 生成文件路径：`Assets/Scripts/Generated/ConfigIds.g.cs`
+3. 使用示例：
 ```csharp
-public bool TryCraft(int recipeId, PlayerInventory inv)
+// 生成的常量类
+public static partial class ConfigIds
 {
-    if (!GameContext.Instance.TryGetDefinition<RecipeDefinition>(recipeId, out var recipe))
-        return false;
-
-    foreach (var input in recipe.inputs)
-        if (!inv.HasItem(input.itemId, input.count))
-            return false;
-
-    foreach (var input in recipe.inputs)
-        inv.RemoveItem(input.itemId, input.count);
-
-    foreach (var output in recipe.outputs)
-        inv.AddItem(output.itemId, output.count);
-
-    return true;
-}
-```
-
-### 13.2 遍历所有物品
-
-```csharp
-var reg = GameContext.Instance.GetRegistry<ItemRegistry>();
-foreach (var kv in reg.Map)
-    Debug.Log($"{kv.Key} -> {kv.Value.displayName}");
-```
-
-### 13.3 枚举全部 Section
-
-```csharp
-foreach (var (name, inst) in GameContext.Instance.Data.EnumerateSections())
-    Debug.Log($"Section={name},Type={inst.GetType().Name}");
-```
-
-### 13.4 采集节点运行时
-
-```csharp
-public class GatherableNodeRuntime : MonoBehaviour {
-    public int nodeDefId;
-    private int remaining;
-    private float respawnAt;
-
-    void Start() {
-        var def = GameContext.Instance.GetDefinition<GatherableNodeDefinition>(nodeDefId);
-        remaining = def.maxHarvestCycles;
-    }
-
-    public void Harvest(Player p) {
-        var def = GameContext.Instance.GetDefinition<GatherableNodeDefinition>(nodeDefId);
-        if (remaining <= 0) {
-            if (def.renewable && Time.time >= respawnAt) {
-                remaining = def.maxHarvestCycles;
-            } else return;
-        }
-
-        remaining--;
-        // 掉落逻辑
-        foreach (var drop in def.drops)
-            if (UnityEngine.Random.value <= drop.chance)
-                p.Inventory.AddItem(drop.itemId, UnityEngine.Random.Range(drop.min, drop.max + 1));
-
-        if (remaining <= 0 && def.renewable)
-            respawnAt = Time.time + def.respawnSeconds;
+    public static class ItemDefinition
+    {
+        public const int Wood = 1001;
+        public const int Stone = 1002;
+        public const int IronOre = 1003;
     }
 }
+
+// 代码中使用
+var wood = GameContext.Instance.GetDefinition<ItemDefinition>(ConfigIds.ItemDefinition.Wood);
 ```
 
-### 13.5 跨表校验示例
+## 8. 性能与兼容性
 
-```csharp
-public static class CrossSectionValidator {
-    public static void Validate(GameRuntimeData data) {
-        // 例：所有配方引用的 itemId 必须存在
-        // （此处伪代码，需遍历 RecipeDefinition registry）
-    }
-}
-```
+### 8.1 性能优化建议
 
----
+- **禁用强制扫描**：在发布版本中设置`forceRescanOnPlay=false`，减少反射开销
+- **控制日志输出**：发布版本中设置`verbose=false`，避免日志IO开销
+- **批量操作**：使用`EnumerateDefinitions<TDef>()`进行批量处理，而非多次调用`GetDefinition`
+- **预加载**：确保`GameContext`在其他系统初始化前完成加载
 
-## 14. 未来可扩展方向
+### 8.2 平台兼容性
 
-| 方向             | 说明                              |
-| -------------- | ------------------------------- |
-| Section 初始化优先级 | IOrderedSection                 |
-| 代码生成           | 生成静态 Id 常量类 / 枚举                |
-| 热更新            | 自定义 Provider + JSON / Bin Patch |
-| 差异对比           | 输出旧/新资产差异报告                     |
-| 数据可视化          | 生成依赖图（Mermaid）                  |
-| 自动索引           | Registry 构建后建立标签→Id 集合          |
-| 数据版本迁移         | 增加 version / deprecated 字段      |
+- **IL2CPP 支持**：通过类型引用和资产依赖防止代码剪裁，复杂场景可添加`link.xml`保留类型
+- **资源加载**：运行时依赖`Resources`系统，确保配置资产正确打包
+- **热更新支持**：如需热更新，可扩展`RuntimeConfigLoader`替换为Addressables或自定义加载器
 
----
+## 9. 常见问题与解决方案
 
-## 15. 资源与采集节点建模指南（新增重点）
+| 问题现象 | 可能原因 | 解决方案 |
+|---------|---------|---------|
+| `GetDefinition`抛出异常 | 对应的ID不存在或配置未加载 | 1. 检查ID是否正确<br>2. 使用`TryGetDefinition`进行安全访问<br>3. 确认配置资产放在正确目录 |
+| 配置分区未加载 | 1. 未实现`IContextSection`接口<br>2. 资产未放在`Resources/Config`目录（运行时） | 1. 检查类继承关系<br>2. 验证资产路径<br>3. 开启`verbose`日志查看加载过程 |
+| 出现重复ID错误 | 两个配置条目使用了相同的ID | 1. 使用`ConfigDatabaseWindow`的冲突检查功能<br>2. 运行`ConfigIdCodeGenerator`生成唯一ID |
+| 运行时访问返回`null` | 访问时机早于`GameContext`初始化 | 1. 确保在`ISyncInitialize`或更晚的阶段访问<br>2. 监听`GameContext`初始化完成事件 |
+| 想修改配置定义值 | 直接修改会影响所有引用 | 1. 创建运行时状态副本<br>2. 使用`Definition`作为模板，在运行时对象中存储修改 |
 
-区分三个层次：
+## 10. 版本历史
 
-| 层次                       | 描述              | 是否 Definition | 示例字段                                                                                  |
-| ------------------------ | --------------- | ------------- | ------------------------------------------------------------------------------------- |
-| 物品（Item / Resource Item） | 背包中存在的抽象物品类型    | 是             | id, displayName, icon, maxStack, tags                                                 |
-| 采集节点模板（Gatherable Node）  | 世界中“可采集对象”的行为模版 | 是             | id, displayName, renewable, respawnSeconds, maxHarvestCycles, drops[], biomeWeights[] |
-| 节点运行时实例（Node Instance）   | 世界上第 N 棵树的当前状态  | 否（运行时）        | nodeDefId, remainingCycles, respawnAt, position, seed                                 |
+| 版本 | 变更内容 |
+|-----|---------|
+| 1.0 | 初始版本：基础加载与访问功能 |
+| 1.1 | 1. 增加配置校验机制<br>2. 优化反射扫描性能<br>3. 完善日志系统<br>4. 新增ID常量生成工具<br>5. 支持自定义注册表扩展 |
 
-典型拆分：
+## 11. 扩展建议
 
-```csharp
-[Serializable]
-public class ItemDefinition : IDefinition {
-    [SerializeField] private int id;
-    public int Id => id;
-    public string displayName;
-    public Sprite icon;
-    public int maxStack = 99;
-    public string[] tags;
-}
-
-[Serializable]
-public class GatherableNodeDefinition : IDefinition {
-    [SerializeField] private int id;
-    public int Id => id;
-    public string displayName;
-    public bool renewable = true;
-    public int respawnSeconds = 300;
-    public int maxHarvestCycles = 3;
-    public ResourceDrop[] drops;
-    public BiomeSpawnWeight[] spawnWeights;
-}
-
-[Serializable]
-public struct ResourceDrop {
-    public int itemId;
-    public int min;
-    public int max;
-    public float chance; // 0~1
-}
-
-[Serializable]
-public struct BiomeSpawnWeight {
-    public int biomeId;
-    public float weight;
-}
-```
-
-不要把 remainingCycles 等“可变值”放进 Definition，否则多个实例会共享状态。
+1. **热更新支持**：实现基于Addressables的`RuntimeConfigLoader`替代方案
+2. **配置版本控制**：添加配置版本号，支持不同版本间的迁移逻辑
+3. **动态配置**：扩展系统支持从服务器下载并合并配置
+4. **可视化配置编辑**：为常用配置类型开发专用编辑窗口，替代默认Inspector
+5. **配置模板系统**：实现配置继承，减少重复数据
 
 ---
 
-## 16. 运行时状态 / 存档 与 Definition 的关系
-
-| 项            | 存什么                          | 如何关联            |
-| ------------ | ---------------------------- | --------------- |
-| 存档（SaveData） | Node 实例数组 / 背包条目             | 保存定义 Id + 运行时字段 |
-| 加载时          | 用 Id 重新 GetDefinition        | 恢复模板属性          |
-| 变更           | 只改运行时对象，不写回 ScriptableObject |                 |
-
-示例存档片段（伪 JSON）：
-
-```json
-{
-  "nodes":[
-    {"nodeDefId":12,"pos":[10,0,5],"remaining":1,"respawnAt":12345.6},
-    {"nodeDefId":13,"pos":[15,0,9],"remaining":0,"respawnAt":13000.2}
-  ],
-  "inventory":[
-    {"itemId":1001,"count":34},
-    {"itemId":1002,"count":5}
-  ]
-}
-```
-
----
-
-## 17. 跨 Section 引用与校验策略
-
-| 场景                                 | 校验方式                                                            |
-| ---------------------------------- | --------------------------------------------------------------- |
-| RecipeDefinition 引用 ItemDefinition | 遍历所有 recipes.inputs/outputs -> TryGetDefinition<ItemDefinition> |
-| GatherableNodeDefinition 掉落 itemId | 遍历 drops[]                                                      |
-| BiomeSpawnWeight 引用 biomeId        | BiomeDefinition 是否存在                                            |
-| 技能引用 buffId                        | BuffDefinition 是否存在                                             |
-
-可实现一个统一校验入口：
-
-```csharp
-public interface IConfigValidator {
-    void Validate(GameRuntimeData data, List<string> issues);
-}
-```
-
-然后扫描实现 IConfigValidator 的脚本，集中运行。
-
----
-
-## 18. ID 管理与防冲突策略
-
-| 方法          | 优点       | 缺点        |
-| ----------- | -------- | --------- |
-| 手动 int      | 灵活       | 容易冲突      |
-| 枚举 + 生成器    | 统一来源     | 需生成脚本     |
-| 外部表统一分配     | 与策划流水线对接 | 接入成本      |
-| 自动分配（编辑器按钮） | 无需记忆     | 变动可能影响旧存档 |
-
-建议：
-
-1. 关键系统（Item / Node / Enemy）提前规划 Id 段（1000~1999 / 2000~2999）
-2. 写一个编辑器工具：扫描所有 Section，输出重复 Id 列表
-3. 若支持代码生成：输出一个 `ConfigIds.cs`
-
----
-
-## 19. 变更记录（Changelog）
-
-| 版本  | 内容                                       |
-| --- | ---------------------------------------- |
-| 1.0 | 初始文档                                     |
-| 1.1 | 增补资源系统拆分、运行时/存档关系、跨 Section 校验、建模指南、示例扩展 |
-
----
-
-## 附录：快速 Checklist
-
-| 需求                                        | 是否完成 |
-| ----------------------------------------- | ---- |
-| 新建 SectionType (继承 DefinitionSectionBase) |      |
-| 添加 definitions 并填写唯一 Id                   |      |
-| 资产加至项目（必要时放 Resources/Config/）            |      |
-| 运行验证日志无错误                                 |      |
-| 使用 GetDefinition<T>(id) 成功获取              |      |
-| 校验工具通过 (Validate All Sections)            |      |
-| 拆分物品 vs 节点定义（如涉及采集）                       |      |
-| 运行时状态未写回 ScriptableObject                 |      |
-| （可选）跨 Section 引用已校验                       |      |
-| （可选）生成 Id 常量代码                            |      |
-| （可选）添加自定义 Registry 查询索引                   |      |
-
----
-
-## 结束语
-
-该系统核心是“模板数据静态化 + 运行时状态分离 + 可扩展加载与校验”。  
-在功能尚未稳定前，不要过早引入：
-
-- 热更新二进制格式
-- 动态差分补丁
-- 复杂依赖图序列
-
-等规模与需求确立后再加。
-
-需要：
-
-- Id 代码生成器
-- Cross Validator 模板
-- Addressables 版本加载示范
-
-请继续提出，我可以补充下一版文档或直接产出脚本。
-
-祝开发顺利！
+系统设计遵循"**模板数据静态化、运行时状态分离、可扩展加载与校验**"的原则，建议在项目初期保持系统简洁，待需求稳定后再逐步添加复杂功能。如需进一步扩展或定制，可参考`数据驱动配置系统.md`文档中的高级指南。
